--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,8 +13,11 @@ dependencies:
   # Otras dependencias que uses
 
 dev_dependencies:
-  flutter_test:
+  flutter:
     sdk: flutter
+  cupertino_icons: ^1.0.2
+  pdf: ^3.6.5
+  excel: ^2.0.1
 
 flutter:
   uses-material-design: true
