--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,23 +9,21 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  cupertino_icons: ^1.0.2
-  # Otras dependencias que uses
-
-dev_dependencies:
-  flutter:
-    sdk: flutter
-  cupertino_icons: ^1.0.2
-  pdf: ^3.6.5
-  excel: ^2.0.1
+  pdf: ^3.11.1
+  path_provider: ^2.0.11
+  path_provider_windows: ^2.1.3
+  open_file: ^3.5.6
+  csv: ^5.0.0
+  excel: ^2.0.0
+  collection: ^1.16.0
 
 flutter:
   uses-material-design: true
 
-  # assets:
-  #   - assets/ # Si tienes imágenes u otros recursos
+  assets:
+    - assets/fonts/Roboto-Regular.ttf
 
-  # fonts:
-  #   - family: Roboto
-  #     fonts:
-  #       - asset: fonts/Roboto-Regular.ttf
+  fonts:
+    - family: Roboto
+      fonts:
+        - asset: assets/fonts/Roboto-Regular.ttf
