--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   csv: ^5.0.0
   excel: ^2.0.0
   collection: ^1.16.0
+  diacritic: ^0.1.3
 
 flutter:
   uses-material-design: true
