--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   excel: ^2.0.0
   collection: ^1.16.0
   diacritic: ^0.1.3
+  universal_html: ^1.2.0
 
 flutter:
   uses-material-design: true
