--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   collection: ^1.16.0
   diacritic: ^0.1.3
   universal_html: ^2.2.4
+  cupertino_icons: ^1.0.2
 
 flutter:
   uses-material-design: true
