--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,6 @@
 *.dill filter=lfs diff=lfs merge=lfs -text
 build/cache.dill.track.dill filter=lfs diff=lfs merge=lfs -text
+*.js filter=lfs diff=lfs merge=lfs -text
+*.css filter=lfs diff=lfs merge=lfs -text
+*.html filter=lfs diff=lfs merge=lfs -text
+*.json filter=lfs diff=lfs merge=lfs -text
