--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   permission_handler: ^10.2.0
   http: ^1.3.0
+  url_strategy: ^0.2.0
 
 flutter:
   uses-material-design: true
