--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -22,13 +22,13 @@ dependencies:
   permission_handler: ^10.2.0
   http: ^1.3.0
   url_strategy: ^0.2.0
+  flutter_lints: ^3.0.1
 
 flutter:
   uses-material-design: true
 
   assets:
     - assets/fonts/Roboto-Regular.ttf
-   
 
   fonts:
     - family: Roboto
