API_URL configurada para build production

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,17 +1,24 @@
 # docker-compose.yml
+# --- Compilación de Flutter ---
 FROM instrumentisto/flutter:3 AS builder
 
-# Copiamos el código fuente del frontend.
+# Copia el código fuente del frontend.
 WORKDIR /app
 COPY . .
 
-# Instalamos las dependencias.
+# Instala las dependencias.
 RUN flutter pub get
 
-# Compilamos la aplicación web para producción.
-RUN flutter build web --release
+# Se declara un argumento que se puede pasar desde docker-compose.
+# Este será el URL de nuestra API de backend.
+ARG API_URL
+
+# Se compila la aplicación web para producción.
+# Se usa --dart-define para inyectar la variable API_URL en el código Dart.
+RUN flutter build web --release --dart-define=API_URL=${API_URL}
 
 
+# --- Servidor Web Nginx ---
 FROM nginx:1.29.0-alpine
 
 # Copiamos los archivos web compilados desde la etapa 'builder'.
