--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,7 +15,12 @@ services:
 
   # Servicio del Frontend (Flutter + Nginx)
   frontend:
-    build: ./frontend
+    build:
+      context: ./frontend
+      args:
+        #  - API_URL=http://api:8000 # URL del backend
+        #  - API_URL=http://localhost:8000 # URL del backend para desarrollo local
+        - API_URL=http://api:8000
     container_name: web
     restart: unless-stopped
     ports:
