--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -2,18 +2,26 @@ server {
     listen 80;
     server_name localhost;
 
-    # Directorio raíz donde se encuentran los archivos de la app Flutter.
-    root /usr/share/nginx/html;
-
-    # Archivo principal a servir.
-    index index.html;
-
+    # Sirve los archivos estáticos de la aplicación Flutter.
     location / {
-        # Permite el acceso a los archivos estáticos (CSS, JS, imágenes, etc.).
-        # Intenta servir el archivo solicitado directamente ($uri).
-        # Si no lo encuentra, intenta servir un directorio ($uri/).
-        # Si falla, devuelve /index.html para que el router de Flutter maneje la ruta.
-        try_files $uri $uri/ /index.html;
+        root   /usr/share/nginx/html;
+        index  index.html index.htm;
+        try_files $uri $uri/ /index.html; # Importante para el enrutamiento de Flutter
+    }
+
+    # Cuando una petición llega a /api, la reenvía al servicio del backend.
+    location /api/ {
+        proxy_pass http://api:8000; # 'api' es el nombre del servicio backend en docker-compose
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
+
+    # Manejo de errores
+    error_page   500 502 503 504  /50x.html;
+    location = /50x.html {
+        root   /usr/share/nginx/html;
     }
 
     # Configuración para compresión Gzip para mejorar el rendimiento.
