--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,15 +13,29 @@ services:
 
   # Servicio del Frontend (Flutter + Nginx)
   frontend:
-    build: ./frontend # Ya no necesita 'context' ni 'args'
+    build: ./frontend
     container_name: web
     restart: unless-stopped
     ports:
       - "80:80"
+      - "443:443" # <-- Añadimos el puerto para HTTPS
+    volumes:
+      - ./frontend/nginx.conf:/etc/nginx/conf.d/default.conf
+      - ./data/letsencrypt:/etc/letsencrypt
+      - ./data/www:/var/www/html
     depends_on:
       - backend
     networks:
       - schedule-net
+
+  # Nuevo servicio para Let's Encrypt
+  certbot:
+    image: certbot/certbot
+    container_name: certbot
+    volumes:
+      - ./data/letsencrypt:/etc/letsencrypt
+      - ./data/www:/var/www/html
+    command: certonly --webroot --webroot-path=/var/www/html --email tu-email@dominio.com --agree-tos --no-eff-email -d tu.dominio.com
 
   # Servicio de la Base de Datos (PostgreSQL)
   db:
@@ -82,6 +96,7 @@ services:
 
 volumes:
   postgres_data:
+  # Los volúmenes de letsencrypt y www ahora se manejan como carpetas locales
 
 networks:
   schedule-net:
