--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -1,17 +1,38 @@
+# Servidor para redirigir HTTP a HTTPS
 server {
     listen 80;
-    server_name localhost;
+    server_name horario.lab.utb.edu.co; # <-- Reemplaza con tu dominio
+
+    # Manejo del reto de Let's Encrypt
+    location /.well-known/acme-challenge/ {
+        root /var/www/html;
+    }
+
+    # Redirige todo el resto del tráfico a HTTPS
+    location / {
+        return 301 https://$host$request_uri;
+    }
+}
+
+# Servidor principal para HTTPS
+server {
+    listen 443 ssl;
+    server_name tu.dominio.com;
+
+    # Rutas a los certificados SSL
+    ssl_certificate /etc/letsencrypt/live/horario.lab.utb.edu.co/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/horario.lab.utb.edu.co/privkey.pem;
 
     # Sirve los archivos estáticos de la aplicación Flutter.
     location / {
         root   /usr/share/nginx/html;
         index  index.html index.htm;
-        try_files $uri $uri/ /index.html; # Importante para el enrutamiento de Flutter
+        try_files $uri $uri/ /index.html;
     }
 
-    # Cuando una petición llega a /api, la reenvía al servicio del backend.
+    # Proxy para la API
     location /api/ {
-        proxy_pass http://api:8000; # 'api' es el nombre del servicio backend en docker-compose
+        proxy_pass http://api:8000;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
