--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -1,7 +1,7 @@
 # Servidor para redirigir HTTP a HTTPS
 server {
     listen 80;
-    server_name horario.lab.utb.edu.co; # <-- Reemplaza con tu dominio
+    server_name horario.lab.utb.edu.co; 
 
     # Manejo del reto de Let's Encrypt
     location /.well-known/acme-challenge/ {
@@ -17,7 +17,7 @@ server {
 # Servidor principal para HTTPS
 server {
     listen 443 ssl;
-    server_name tu.dominio.com;
+    server_name horario.lab.utb.edu.co;
 
     # Rutas a los certificados SSL
     ssl_certificate /etc/letsencrypt/live/horario.lab.utb.edu.co/fullchain.pem;
