--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -1,16 +1,15 @@
 # Servidor para redirigir HTTP a HTTPS
 server {
     listen 80;
-    server_name horario.lab.utb.edu.co; 
+    server_name horario.lab.utb.edu.co;
 
-    # Manejo del reto de Let's Encrypt
+    # Manejo del reto de Let's Encrypt (para futuras renovaciones)
     location /.well-known/acme-challenge/ {
         root /var/www/html;
     }
 
-    # Redirige todo el resto del tráfico a HTTPS
     location / {
-        return 301 https://$host$request_uri;
+        return 301 https://\$host\$request_uri;
     }
 }
 
@@ -19,36 +18,20 @@ server {
     listen 443 ssl;
     server_name horario.lab.utb.edu.co;
 
-    # Rutas a los certificados SSL
     ssl_certificate /etc/letsencrypt/live/horario.lab.utb.edu.co/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/horario.lab.utb.edu.co/privkey.pem;
 
-    # Sirve los archivos estáticos de la aplicación Flutter.
     location / {
         root   /usr/share/nginx/html;
         index  index.html index.htm;
-        try_files $uri $uri/ /index.html;
+        try_files \$uri \$uri/ /index.html;
     }
 
-    # Proxy para la API
     location /api/ {
         proxy_pass http://api:8000;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header Host \$host;
+        proxy_set_header X-Real-IP \$remote_addr;
+        proxy_set_header X-Forwarded-For \$proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto \$scheme;
     }
-
-    # Manejo de errores
-    error_page   500 502 503 504  /50x.html;
-    location = /50x.html {
-        root   /usr/share/nginx/html;
-    }
-
-    # Configuración para compresión Gzip para mejorar el rendimiento.
-    gzip on;
-    gzip_vary on;
-    gzip_proxied any;
-    gzip_comp_level 6;
-    gzip_types text/plain text/css text/xml application/json application/javascript application/xml+rss application/atom+xml image/svg+xml;
 }
