Backend a prueba de errores

--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -16,7 +16,8 @@ server {
 
 # Servidor principal para HTTPS
 server {
-    listen 443 ssl http2;
+    listen 443 ssl;
+    http2 on;
     server_name horario.lab.utb.edu.co;
 
     # Rutas a los certificados SSL
