--- a/.gitignore
+++ b/.gitignore
@@ -86,6 +86,8 @@ app.*.map.json
 #
 # Archivos de contexto de compilación que no se deben incluir
 .dockerignore
+docker-compose.override.yml
+nginx.dev.conf
 
 # ===================================================================
 # Archivos del Sistema Operativo y Misceláneos
