--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -9,23 +9,25 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  pdf: ^3.11.1
-  path_provider: ^2.0.11
+  pdf: ^3.11.3
+  path_provider: ^2.1.5
   path_provider_windows: ^2.1.3
-  open_file: ^3.5.6
-  csv: ^5.0.0
-  excel: ^2.0.0
+  open_file: ^3.5.10
+  csv: ^6.0.0
+  excel: ^4.0.6
   collection: ^1.16.0
   diacritic: ^0.1.3
   universal_html: ^2.2.4
   cupertino_icons: ^1.0.2
-  permission_handler: ^10.2.0
-  http: ^1.3.0
+  permission_handler: ^12.0.1
+  http: ^1.4.0
   url_launcher: ^6.3.0
-  url_strategy: ^0.2.0
-  flutter_lints: ^3.0.1
-  firebase_core: ^2.32.0
-  firebase_analytics: ^10.10.7
+  url_strategy: ^0.3.0
+  flutter_lints: ^6.0.0
+  firebase_core: ^3.15.1
+  firebase_analytics: ^11.5.2
+  flutter_speed_dial: ^7.0.0
+  web: ^1.1.1
 
 
 flutter:
