--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -38,7 +38,12 @@ server {
 
     # Proxy para la API
     location /api/ {
-        proxy_pass http://api:8000;
+        # Usar el resolver interno de Docker y establecer un tiempo de validez.
+        # 127.0.0.11 es el resolver DNS embebido de Docker.
+        resolver 127.0.0.11 valid=10s;
+        set $backend_host "api:8000";
+        proxy_pass http://$backend_host;
+
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
