--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -9,6 +9,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  provider: ^6.1.2
   pdf: ^3.11.3
   path_provider: ^2.1.5
   path_provider_windows: ^2.1.3
